+ Added payment form. + added office form. + added new car icon. + added a new payment resolver view model Pendent to refaftor the structure.

--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -92,6 +92,7 @@
     <Compile Include="DataObjects\Negocio.cs" />
     <Compile Include="DataObjects\OrigenCliente.cs" />
     <Compile Include="DataObjects\Poblacion.cs" />
+    <Compile Include="IDataAccessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Provincia.cs" />
     <Compile Include="DataObjects\SectorActividad.cs" />
@@ -134,8 +135,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Auxiliares.xml" />
-    <Content Include="Banks.xml" />
-    <Content Include="ChargeTypes.xml" />
+    <Content Include="Banks.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="ChargeTypes.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
