--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -188,12 +188,12 @@
     <Compile Include="Model\Generic\RecopilatorioCollections.cs" />
     <Compile Include="Utility\ValidationRuleDataGrid.cs" />
     <Compile Include="ViewModel\ConfiguracionViewModel\CintaOpcionesViewModel.cs" />
-    <Compile Include="ViewModel\DataGridUserControlViewModel.cs" />
     <Compile Include="ViewModel\GenericViewModel\CloseTabItemViewModel.cs" />
     <Compile Include="ViewModel\GenericViewModel\CloseWindowViewModel.cs" />
-    <Compile Include="ViewModel\GenericViewModel\SetLanguagesViewModel.cs" />
+    <Compile Include="ViewModel\GenericViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\MaestrosViewModel\GrupoVehiculoViewModel.cs" />
     <Compile Include="ViewModel\MaestrosViewModel\MostrarAuxiliaresViewModel.cs" />
+    <Compile Include="ViewModel\MaestrosViewModel\PaymentResolverViewModel.cs" />
     <Compile Include="View\GrupoVehiculoUserControl.xaml.cs">
       <DependentUpon>GrupoVehiculoUserControl.xaml</DependentUpon>
     </Compile>
@@ -386,10 +386,17 @@
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="PaymentsTypeModule\PaymentTypeModule.csproj">
+      <Project>{3f0503de-3dde-40a4-af70-f698bfa9f844}</Project>
+      <Name>PaymentTypeModule</Name>
+    </ProjectReference>
     <ProjectReference Include="ToolBarModule\ToolBarModule.csproj">
       <Project>{55ce0de8-792f-49fc-8e90-6c3f9cd75486}</Project>
       <Name>ToolBarModule</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\rentCarIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
