--- a/src/app.config
+++ b/src/app.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="KarveCar.Properties.Settings.CadenaConexion" connectionString="Dsn=DBRENT_NET16;uid=cv;pwd=1929" />
+        <add name="connectionstring" connectionString="EngineName=DBRENT_NET16; DatabaseName=DBRENT_NET16; Uid=cv; pwd=1929; Links=tcpip(host=172.26.0.45)" />
     </connectionStrings>
     <userSettings>
         <KarveCar.Properties.Settings>
