1. Fixed number behaviou in forma de cobros cliente. 2. Remove the Dal locator anti pattern 3. Introducted dataservices 4. Changed exception. Added the KarveCommonException.cs (Still pending to define best pratices for exception).

--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generic\IDataGridRowChange.cs" />
+    <Compile Include="KarveCommonException.cs" />
     <Compile Include="Services\CareKeeper.cs" />
     <Compile Include="Command\AbstractCommand.cs" />
     <Compile Include="Command\CommandHistory.cs" />
