--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -429,6 +429,9 @@
   <ItemGroup>
     <Resource Include="rentcaricon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\paymentTypes.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
