--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Generic\ManageGenericObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IConfigurationService.cs" />
+    <Compile Include="Services\ITabService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
