+ Fixed call to the VehicleGroup + Fixed DataGrid.

--- a/src/DALModule/KarveDataServices/KarveDataServices.csproj
+++ b/src/DALModule/KarveDataServices/KarveDataServices.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="IDataServices.cs" />
     <Compile Include="IPaymentDataService.cs" />
+    <Compile Include="IVehicleDataServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
