--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -73,6 +73,8 @@
     <Compile Include="DataObjects\GrupoTarifa.cs" />
     <Compile Include="DataObjects\OfficePerInvoiceTypeObject.cs" />
     <Compile Include="DataObjects\GrupoVehiculoDataObject.cs" />
+    <Compile Include="DataObjects\SupplierInfoDataObject.cs" />
+    <Compile Include="DataObjects\SupplierProvinceDataObject.cs" />
     <Compile Include="DataObjects\SupplierSummaryDataObject.cs" />
     <Compile Include="DataServiceImplementation.cs" />
     <Compile Include="DataObjects\IncidenciaCliente.cs" />
