- Added batch mode to the DataMode. Just one connection for multiple queries. - Fixed and unit tested the SupplierDataAccessLayer. All calls are asynchronous. - Added a base Asynchronous command. - Added a session scope interface.

--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DataObjects\Constants.cs" />
     <Compile Include="BanksDataAccessLayer.cs" />
     <Compile Include="DataLayerExecutionException.cs" />
+    <Compile Include="DataObjects\CountryDataObject.cs" />
     <Compile Include="DataObjects\Divisa.cs" />
     <Compile Include="DataObjects\FormaPagoProveedor.cs" />
     <Compile Include="DataObjects\FormaTraslado.cs" />
