--- a/test/KarveTest/KarveTest/packages.config
+++ b/test/KarveTest/KarveTest/packages.config
@@ -3,6 +3,14 @@
   <package id="Castle.Core" version="3.3.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
