--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -17,13 +17,18 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 		<typeAlias alias="ChargeTypeObject" 	        	type="DataAccessLayer.DataObjects.ChargeTypeObject"/>
 		<typeAlias alias="InvoiceDataObject" 	        	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
 		<typeAlias alias="ZoneOfficeDataObject"       	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
-		<typeAlias alias="AccountTypeDataObject"     	  	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
+		<typeAlias alias="AccountTypeDataObject"  	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
 		<typeAlias alias="BankDataObject" 		        type="DataAccessLayer.DataObjects.BancoDataObject"/>
 		<typeAlias alias="ChargeOptionDataObject" 	type="DataAccessLayer.DataObjects.ChargeOptionDataObject"/>
 		<typeAlias alias="OfficePerInvoiceTypeObject" 	type="DataAccessLayer.DataObjects.OfficePerInvoiceTypeObject"/>
+		<typeAlias alias="SupplierSummaryDataObject"  	 type="DataAccessLayer.DataObjects.SupplierSummaryDataObject" />
+		<typeAlias alias="SupplierInfoDataObject"  		type="DataAccessLayer.DataObjects.SupplierInfoDataObject" />
+		<typeAlias alias="SupplierProvinceDataObject"  		type="DataAccessLayer.DataObjects.SupplierProvinceDataObject" />
+		<typeAlias alias="SupplierCountryDataObject"  		type="DataAccessLayer.DataObjects.CountryDataObject" />
 	</alias>  
   <sqlMaps>
 	<sqlMap uri="ChargeTypes.xml"/>
     	<sqlMap uri="Banks.xml"/>
+	<sqlMap uri="Suppliers.xml"/>
   </sqlMaps>
 </sqlMapConfig>
