--- a/src/DALModule/KarveDataServices/KarveDataServices.csproj
+++ b/src/DALModule/KarveDataServices/KarveDataServices.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DataObjects\IProvinceDataObject.cs" />
     <Compile Include="DataObjects\ISupplierDataObject.cs" />
     <Compile Include="DataObjects\ISupplierDataObjectInfo.cs" />
+    <Compile Include="DataObjects\ISupplierTypeDataObject.cs" />
     <Compile Include="ISupplierDataServices.cs" />
     <Compile Include="IDataServices.cs" />
     <Compile Include="IPaymentDataService.cs" />
