--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dragablz">
+      <HintPath>..\..\lib\Dragablz.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
@@ -60,7 +63,7 @@
   <ItemGroup>
     <Compile Include="Generic\ICreateRegionManagerScope.cs" />
     <Compile Include="Generic\IDataGridRowChange.cs" />
-    <Compile Include="Generic\ScopedRegionNavigationContentLoader.cs" />
+    <Compile Include="Generic\KarveIntertTabClient.cs" />
     <Compile Include="KarveCommonException.cs" />
     <Compile Include="Services\CareKeeper.cs" />
     <Compile Include="Command\AbstractCommand.cs" />
