--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -69,6 +69,7 @@
     <Compile Include="DataLayerExecutionException.cs" />
     <Compile Include="DataObjects\CountryDataObject.cs" />
     <Compile Include="DataObjects\Divisa.cs" />
+    <Compile Include="DataObjects\ExtendedSummaryDataObject.cs" />
     <Compile Include="DataObjects\FormaPagoProveedor.cs" />
     <Compile Include="DataObjects\FormaTraslado.cs" />
     <Compile Include="DataObjects\GrupoTarifa.cs" />
@@ -95,6 +96,8 @@
     <Compile Include="DataObjects\Negocio.cs" />
     <Compile Include="DataObjects\OrigenCliente.cs" />
     <Compile Include="DataObjects\Poblacion.cs" />
+    <Compile Include="HelperDataAccessLayer.cs" />
+    <Compile Include="HelperDataServicesImplementation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Provincia.cs" />
     <Compile Include="DataObjects\SectorActividad.cs" />
