--- a/src/DALModule/KarveDataServices/KarveDataServices.csproj
+++ b/src/DALModule/KarveDataServices/KarveDataServices.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DataObjects\ISupplierDataObject.cs" />
     <Compile Include="DataObjects\ISupplierDataObjectInfo.cs" />
     <Compile Include="DataObjects\ISupplierTypeDataObject.cs" />
+    <Compile Include="IHelperDataServices.cs" />
     <Compile Include="ISupplierDataServices.cs" />
     <Compile Include="IDataServices.cs" />
     <Compile Include="IPaymentDataService.cs" />
