--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -14,17 +14,19 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 		<dataSource name="ibatisnet.sqlmap" connectionString="EngineName=DBRENT_NET16;DataBaseName=DBRENT_NET16;Uid=cv;Pwd=1929;Host=172.26.0.45"/>
 	</database>
 	<alias>
-		<typeAlias alias="ChargeTypeObject" 	        	type="DataAccessLayer.DataObjects.ChargeTypeObject"/>
-		<typeAlias alias="InvoiceDataObject" 	        	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
-		<typeAlias alias="ZoneOfficeDataObject"       	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
-		<typeAlias alias="AccountTypeDataObject"  	type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
-		<typeAlias alias="BankDataObject" 		        type="DataAccessLayer.DataObjects.BancoDataObject"/>
-		<typeAlias alias="ChargeOptionDataObject" 	type="DataAccessLayer.DataObjects.ChargeOptionDataObject"/>
-		<typeAlias alias="OfficePerInvoiceTypeObject" 	type="DataAccessLayer.DataObjects.OfficePerInvoiceTypeObject"/>
-		<typeAlias alias="SupplierSummaryDataObject"  	 type="DataAccessLayer.DataObjects.SupplierSummaryDataObject" />
-		<typeAlias alias="SupplierInfoDataObject"  		type="DataAccessLayer.DataObjects.SupplierInfoDataObject" />
+		<typeAlias alias="ChargeTypeObject" 	        		type="DataAccessLayer.DataObjects.ChargeTypeObject"/>
+		<typeAlias alias="InvoiceDataObject" 	        		type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
+		<typeAlias alias="ZoneOfficeDataObject"       		type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
+		<typeAlias alias="AccountTypeDataObject"  		type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
+		<typeAlias alias="BankDataObject" 		        	type="DataAccessLayer.DataObjects.BancoDataObject"/>
+		<typeAlias alias="ChargeOptionDataObject" 		type="DataAccessLayer.DataObjects.ChargeOptionDataObject"/>
+		<typeAlias alias="OfficePerInvoiceTypeObject" 		type="DataAccessLayer.DataObjects.OfficePerInvoiceTypeObject"/>
+		<typeAlias alias="SupplierSummaryDataObject"  	 	 type="DataAccessLayer.DataObjects.SupplierSummaryDataObject" />
+		<typeAlias alias="ExtendedSummaryDataObject"  	 type="DataAccessLayer.DataObjects.ExtendedSummaryDataObject" />
+		<typeAlias alias="SupplierInfoDataObject"  			type="DataAccessLayer.DataObjects.SupplierInfoDataObject" />
 		<typeAlias alias="SupplierProvinceDataObject"  		type="DataAccessLayer.DataObjects.SupplierProvinceDataObject" />
 		<typeAlias alias="SupplierCountryDataObject"  		type="DataAccessLayer.DataObjects.CountryDataObject" />
+		<typeAlias alias="SupplierTypeDataObject"  		type="DataAccessLayer.DataObjects.SupplierTypeDataObject" />
 	</alias>  
   <sqlMaps>
 	<sqlMap uri="ChargeTypes.xml"/>
