- Adding  data objects for the supplier evaluation and notes. - Now the xml are copied directly to the deploy directory. - added furthere etsts in tests

--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -83,8 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\BankAccessLayerTest.cs" />
-    <Compile Include="DAL\TestProvidersDataLayer.cs" />
-    <Compile Include="KarveDataServices\ISupplierEvaluationNote.cs" />
+    <Compile Include="DAL\TestSupplierDataServicesLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TestConfigurationService.cs" />
     <Compile Include="UI\GUITests.cs" />
