--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -75,12 +75,16 @@
     <Compile Include="DataObjects\GrupoTarifa.cs" />
     <Compile Include="DataObjects\OfficePerInvoiceTypeObject.cs" />
     <Compile Include="DataObjects\GrupoVehiculoDataObject.cs" />
-    <Compile Include="DataObjects\SupplierEvaluationNoteDataObject.cs" />
+    <Compile Include="DataObjects\PageParameterObject.cs" />
+    <Compile Include="DataObjects\SupplierContactsDataObject.cs" />
+    <Compile Include="DataObjects\SupplierEvaluationDataObject.cs" />
     <Compile Include="DataObjects\SupplierInfoDataObject.cs" />
+    <Compile Include="DataObjects\SupplierMonitoringDataObject.cs" />
     <Compile Include="DataObjects\SupplierProvinceDataObject.cs" />
     <Compile Include="DataObjects\SuppliersBranchesDataObject.cs" />
     <Compile Include="DataObjects\SupplierSummaryDataObject.cs" />
     <Compile Include="DataObjects\SupplierTypeDataObject.cs" />
+    <Compile Include="DataObjects\SupplierVisitDataObject.cs" />
     <Compile Include="DataServiceImplementation.cs" />
     <Compile Include="DataObjects\IncidenciaCliente.cs" />
     <Compile Include="DataObjects\IncidenciaContrato.cs" />
