--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -14,7 +14,6 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 		<dataSource name="ibatisnet.sqlmap" connectionString="EngineName=DBRENT_NET16;DataBaseName=DBRENT_NET16;Uid=cv;Pwd=1929;Host=172.26.0.45"/>
 	</database>
 	<alias>
-	<!-- payment types data objects -->
 	<typeAlias alias="ChargeTypeObject" 	        		type="DataAccessLayer.DataObjects.ChargeTypeObject"/>
 	<typeAlias alias="InvoiceDataObject" 	        		type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
 	<typeAlias alias="ZoneOfficeDataObject"       		type="DataAccessLayer.DataObjects.BaseAuxDataObject"/>
@@ -22,7 +21,6 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 	<typeAlias alias="BankDataObject" 		        	type="DataAccessLayer.DataObjects.BancoDataObject"/>
 	<typeAlias alias="ChargeOptionDataObject" 		type="DataAccessLayer.DataObjects.ChargeOptionDataObject"/>
 	<typeAlias alias="OfficePerInvoiceTypeObject" 		type="DataAccessLayer.DataObjects.OfficePerInvoiceTypeObject"/>
-	<!-- suppliers management  --->	
 	<typeAlias alias="SupplierSummaryDataObject"  	 	type="DataAccessLayer.DataObjects.SupplierSummaryDataObject" />
 	<typeAlias alias="ExtendedSummaryDataObject"  	type="DataAccessLayer.DataObjects.ExtendedSummaryDataObject" />
 	<typeAlias alias="SupplierInfoDataObject"  			type="DataAccessLayer.DataObjects.SupplierInfoDataObject" />
@@ -32,8 +30,9 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 	<typeAlias alias="SuppliersBranchesDataObject"  	type="DataAccessLayer.DataObjects.SuppliersBranchesDataObject" />	
 	<typeAlias alias="SupplierEvaluationDataObject"  	type="DataAccessLayer.DataObjects.SupplierEvaluationDataObject" />	
 	<typeAlias alias="SupplierContactsDataObject"		type="DataAccessLayer.DataObjects.SupplierContactsDataObject" />
-	<typeAlias alias="SuppliersVisitDataObject"			type="DataAccessLayer.DataObjects.SuppliersVisitDataObject" />
+	<typeAlias alias="SuppliersVisitDataObject"			type="DataAccessLayer.DataObjects.SupplierVisitDataObject" />
 	<typeAlias alias="SupplierMonitoringDataObject"		type="DataAccessLayer.DataObjects.SupplierMonitoringDataObject" />
+	<typeAlias alias="PageParameter"			type="DataAccessLayer.DataObjects.PageParameterObject" />
 </alias>  
   <sqlMaps>
 	<sqlMap uri="ChargeTypes.xml"/>
