--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -46,7 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessoryDataAccessLayer.cs" />
     <Compile Include="ChargeTypeDataAccessLayer.cs" />
     <Compile Include="DataObjects\AccesorioVehiculoDataObject.cs" />
     <Compile Include="DataObjects\ActividadVehiculo.cs" />
@@ -76,6 +75,7 @@
     <Compile Include="DataObjects\OfficePerInvoiceTypeObject.cs" />
     <Compile Include="DataObjects\GrupoVehiculoDataObject.cs" />
     <Compile Include="DataObjects\PageParameterObject.cs" />
+    <Compile Include="DataObjects\SupplierAccountObjectInfo.cs" />
     <Compile Include="DataObjects\SupplierContactsDataObject.cs" />
     <Compile Include="DataObjects\SupplierEvaluationDataObject.cs" />
     <Compile Include="DataObjects\SupplierInfoDataObject.cs" />
@@ -102,9 +102,11 @@
     <Compile Include="DataObjects\Negocio.cs" />
     <Compile Include="DataObjects\OrigenCliente.cs" />
     <Compile Include="DataObjects\Poblacion.cs" />
+    <Compile Include="DeleteCommandObject.cs" />
     <Compile Include="HelperDataAccessLayer.cs" />
     <Compile Include="HelperDataServicesImplementation.cs" />
     <Compile Include="IKarveDataMapper.cs" />
+    <Compile Include="InsertCommandObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Provincia.cs" />
     <Compile Include="DataObjects\SectorActividad.cs" />
@@ -123,6 +125,9 @@
     <Compile Include="DataObjects\ZonaCliente.cs" />
     <Compile Include="DataObjects\ZonaOficina.cs" />
     <Compile Include="SupplierDataAccessLayer.cs" />
+    <Compile Include="SupplierDataServiceAccessDeniedException.cs" />
+    <Compile Include="SupplierDataServicesAccessModifiedException.cs" />
+    <Compile Include="UpdateCommandObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="providers.config">
