--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -103,14 +103,16 @@
     <Compile Include="DataObjects\Negocio.cs" />
     <Compile Include="DataObjects\OrigenCliente.cs" />
     <Compile Include="DataObjects\Poblacion.cs" />
-    <Compile Include="DBFieldAttribute.cs" />
-    <Compile Include="DBFieldType.cs" />
-    <Compile Include="DBTableAttribute.cs" />
+    <Compile Include="DataUpdateException.cs" />
+    <Compile Include="Attributes\DBFieldAttribute.cs" />
+    <Compile Include="Attributes\DBFieldType.cs" />
+    <Compile Include="Attributes\DBTableAttribute.cs" />
     <Compile Include="DeleteCommandObject.cs" />
     <Compile Include="HelperDataAccessLayer.cs" />
     <Compile Include="HelperDataServicesImplementation.cs" />
     <Compile Include="IKarveDataMapper.cs" />
     <Compile Include="InsertCommandObject.cs" />
+    <Compile Include="InsertCommissionNumberCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataObjects\Provincia.cs" />
     <Compile Include="DataObjects\SectorActividad.cs" />
@@ -132,8 +134,12 @@
     <Compile Include="SupplierDataAccessLayer.cs" />
     <Compile Include="SupplierDataServiceAccessDeniedException.cs" />
     <Compile Include="SupplierDataServicesAccessModifiedException.cs" />
+    <Compile Include="SupplierDataUpdater.cs" />
     <Compile Include="SupplierSublicenDataObject.cs" />
+    <Compile Include="UpdateCommandDictionary.cs" />
     <Compile Include="UpdateCommandObject.cs" />
+    <Compile Include="UpdateCommandTable.cs" />
+    <Compile Include="UpdateSupplierAccountCommandObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="providers.config">
