--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -61,6 +61,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generic\CommonString.cs" />
     <Compile Include="Generic\EnvirommentConfig.cs" />
     <Compile Include="Services\EventManager.cs" />
     <Compile Include="Services\IEnviromentVariables.cs" />
