--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Generic\CommonString.cs" />
     <Compile Include="Generic\EnvirommentConfig.cs" />
+    <Compile Include="Generic\KarveViewModelBase.cs" />
     <Compile Include="Services\EventManager.cs" />
     <Compile Include="Services\IEnviromentVariables.cs" />
     <Compile Include="Services\IEventManager.cs" />
@@ -100,6 +101,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DALModule\KarveDataServices\KarveDataServices.csproj">
+      <Project>{83407587-1785-481B-A4FB-23E035173190}</Project>
+      <Name>KarveDataServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
