--- a/src/ProvidersModule/ProvidersModule.csproj
+++ b/src/ProvidersModule/ProvidersModule.csproj
@@ -42,8 +42,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dragablz.dll</HintPath>
     </Reference>
-    <Reference Include="ExtendedGrid">
-      <HintPath>..\..\..\..\..\Visual Studio 2017\Projects\ClientesFormaDeCobros\ClientesFormaDeCobros\ExtendedGrid.dll</HintPath>
+    <Reference Include="ExtendedGrid, Version=4.5.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\ExtendedDataGrid\ExtendedGrid\bin\Debug\ExtendedGrid.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -309,6 +310,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\disk.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ExtendedGrid.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
